Updating the swagger documentation
